<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/addMenu"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_name">
    </item>
    <item
        android:id="@+id/deleteMenu"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/deleteName">
    </item>
    <item
        android:id="@+id/rateApp"
        android:icon="@drawable/star"
        android:title="@string/rate_the_app">
    </item>
    <item
        android:id="@+id/preference"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferences">
    </item>
    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help">
    </item>
    <item
        android:id="@+id/reportBug"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/report_bug">
    </item>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about">
    </item>

</menu>