<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_choose_menu_to_add_or_remove_names_" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note"
        android:fadingEdge="none"
        android:orientation="vertical"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/mainList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/infoBarLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/infobar"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                android:textAlignment="gravity" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/server_mode"
                    android:textAlignment="gravity"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/userIdTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/currentNameTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/noteTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/note_set_your_user_id_on_associatted_phone_" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/systemList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nameList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!-- android:layout_alignParentBottom="true" -->
</RelativeLayout>
<!-- author Vishal Vijay -->